<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>net.kolotyluk.loom</groupId>
    <artifactId>loom-lab</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>benchmarks</module>
        <module>old-school</module>
        <module>laboratory</module>
    </modules>

    <packaging>pom</packaging>

    <name>loom-lab</name>
    <description>
        A place for experimenting with the new concepts and features of Java Project Loom
    </description>
    <url>https://kolotyluk.github.io/loom-lab</url>
    <inceptionYear>2021</inceptionYear>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <organization>
        <name>Eric Kolotyluk</name>
        <url>https://kolotyluk.github.io</url>
    </organization>

    <developers>
        <developer>
            <id>ekolotyluk</id>
            <name>Eric Kolotyluk</name>
            <email>eric@kolotyluk.net</email>
            <url>https://github.com/kolotyluk</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Canada/Pacific</timezone>
            <properties>
                <picUrl>https://avatars.githubusercontent.com/u/1012211</picUrl>
            </properties>
        </developer>
    </developers>

    <scm>
        <connection>scm:svn:http://noonecares.com/some/plugin/project/trunk</connection>
        <developerConnection>scm:svn:https://noonecares.com/some/plugin/project/trunk</developerConnection>
        <url>http://noonecares.com/viewvc/some/project/trunk/</url>
    </scm>

    <properties>
        <maven.compiler.executable>${env.JAVA_HOME}/bin/javac</maven.compiler.executable>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.maven.doxia</groupId>
                <artifactId>doxia-site-renderer</artifactId>
                <version>1.10</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>1.6.10</version>
            </dependency>
            <dependency>
                <groupId>kr.pe.kwonnam.slf4j-lambda</groupId>
                <artifactId>slf4j-lambda-core</artifactId>
                <version>0.1</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.0-alpha5</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.3.0-alpha11</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.3.0-alpha11</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java8</artifactId>
                <version>7.1.0</version>
            </dependency>

            <!-- TESTING -->

            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java</artifactId>
                <version>7.1.0</version>
                <scope>test</scope>
            </dependency>
<!--
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-spring</artifactId>
                <version>7.1.0</version>
                <scope>test</scope>
            </dependency>
-->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-junit-platform-engine</artifactId>
                <version>7.1.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>net.masterthought</groupId>
                <artifactId>cucumber-reporting</artifactId>
                <version>5.6.1</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-test-junit</artifactId>
                <version>1.6.10</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.8.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-suite-engine</artifactId>
                <version>1.8.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-site-renderer</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
<!--
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <executable>${env.JAVA_HOME}/bin/javac</executable>
                        <source>19</source>
                        <target>19</target>
                        <compilerArgs>
                            <arg>&#45;&#45;enable-preview</arg>
                            <arg>&#45;&#45;add-modules jdk.incubator.concurrent</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
-->
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>4.5.4</version>
                    <configuration>
                        <addJavacArgs>--enable-preview</addJavacArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>2.5.1</version>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>1.6.10</version>
<!--
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions>
-->
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <additionalOptions>--enable-preview</additionalOptions>
                        <failOnError>false</failOnError>
<!--
                        <stylesheet>maven</stylesheet>
                        <stylesheetfile>javadoc.css</stylesheetfile>
-->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.9.1</version>
                    <configuration>
                        <outputDirectory>docs/site</outputDirectory>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
<!--                    <configuration>
                        <testSourceDirectory>
                            <includes>
                                <include>**/*RunCucumberTests.java</include>
                            </includes>
                        </testSourceDirectory>
                    </configuration>
 -->                   <version>2.22.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>

</project>
